# LCP

./: .gitignore  .gitmodules  README.md
Module_A/code/: .gitignore  00_introduction.ipynb  00_introduction.md  00ex_introduction.ipynb  00ex_introduction.md  01_Fundamentals.ipynb  01_Fundamentals.md  01ex_Fundamentals.ipynb  01ex_Fundamentals.md  pyproject.toml
Module_B/: .gitignore  main.py  pyproject.toml
Module_B/code/: gradient_descent.ipynb
Module_B/code/CNN/: exr_CNN_2026.ipynb  generate_time-series_2026.ipynb  group2606_exercise2.ipynb
Module_B/code/Clustering/: gen-26-clustering.ipynb
Module_B/code/Combining_Models/: gen-XGB-26.ipynb  group2606_exercise3.ipynb  xgb_class_26.ipynb
Module_B/code/DNN/: analise_data_DNN_2026.ipynb  generate_data_DNN_2026.ipynb  useful.py
Module_B/code/Gradient_descent/: gradient_descent.ipynb
Module_B/final_project/latex/: LCPB_assignment_template.tex
Module_B/utils/: plots.py
