[project]
name = "classes"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "ipykernel>=6.30.1",
    "jupyter>=1.1.1",
    "jupyter-client>=8.6.3",
    "jupytext>=1.17.3",
    "numpy>=2.3.4",
    "pillow>=11.3.0",
    "pynvim>=0.6.0",
]
